Zope changes

  This file contains change information for the current Zope release. 
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

    Zope 2.3.0
    
      Features Added

	- **This is the trunk version of CHANGES.txt. Please put only 
            new features here. Bug fixes should be fixed on both the 
            trunk and current release branch, but the note for a bug 
            fix should go into the CHANGES.txt of the current release 
            branch (which is where the next bug-fix release will be 
            made from).**

        - Added the __replaceable__ property support to ObjectManager.
            This is currently documented only in the Wiki.

        - Added unit tests for the DateTime module.

        - Added new BASEPATHn and URLPATHn variables in the REQUEST
          object, and changed Zope core DTML files to use BASEPATH1
          instead of SCRIPT_NAME.

        - Added new getId() method to SimpleItem.Item. This should 
          now be used instead of referencing 'object.id' directly, 
          as it is guaranteed to always be a method and to always 
          return the right thing regardless of how the id of the 
          object is stored internally.
