@@ -17,3 +17,15 @@ try:
     raise 'Program error', 'spam'
 except AttributeError: pass
 
+#
+#   New test for wrapper comparisons.
+#
+foo = b.a
+bar = b.a
+assert( foo == bar )
+c = A()
+b.c = c
+b.c.d = c
+assert( b.c.d == c )
+assert( b.c.d == b.c )
+assert( b.c == c )
